Fri Oct 03 11:07:20 2003  Nanbor Wang  <nanbor@cs.wustl.edu>

	* docs/releasenotes.html: Updated with more recent news.

Fri Oct  3 08:14:26 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* examples/handcrafted/BasicSP_EC/EC/EC.mpc: Fixed a problem with
	  the MPC file. Thanks to Johnny Willemsen for poitning this out.

Thu Oct  2 15:02:10 2003  Boris Kolpackov  <boris@dre.vanderbilt.edu>

	* CCF/CCF/IDL2/Traversal/TypeId.hpp:
	* CCF/CCF/IDL2/Traversal/TypeId.cpp:
	* CCF/CCF/IDL2/Traversal.hpp:
	* CCF/CCF/IDL2/SyntaxTree.hpp:
	* CCF/CCF/IDL2/SemanticAction.hpp: Added missing pieces for
	  typeid/typeprefix support.

Wed Oct  1 14:26:09 2003  Boris Kolpackov  <boris@dre.vanderbilt.edu>

	* CCF/CCF/CompilerElements/Context.hpp: added count () member
	  function.

	* CIDLC/RepositoryIdGenerator.hpp:
	* CIDLC/RepositoryIdGenerator.cpp: implemented first phase of
	  repository id generation.

Tue Sep 30 09:52:13 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* performance-tests/mico/mico-thrput-st/client.cc:
	* performance-tests/mico/mico-thrput-st/server.cc:

	  Fixed fuzz errors.


Fri Sep 26 12:13:44 2003  Nanbor Wang  <nanbor@cs.wustl.edu>

	* performance-tests/Benchmark/RoundTripClient/run_test_ior_cad.pl:
	  Changed to deploy Test-IOR.cad instead of
	  Test-Name-Service.cad.

	* performance-tests/Benchmark/RoundTripClient/RoundTripClient_stub_export.h:
	* performance-tests/Benchmark/RoundTripClient/RoundTripClient_svnt_export.h:
	  Fixed some extra line-breaks that were causing compilation errors.

	* performance-tests/Benchmark/RoundTripClient/RoundTripClient_exec.cpp:
	  Fixed a compilation error.

	* performance-tests/Benchmark/RoundTripServer/RoundTripServer.mpc:
	  Removed a redundant comma.

	* tools/ComponentServer/ComponentServer.cpp:
	  Fixed execution error in "debug mode."

Wed Sep 24 20:59:09 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* examples/handcrafted/BasicSP_EC2/EC/EC.mpc: Fixed problems that