@@ -1,6 +1,7 @@
 Fri Oct 03 11:07:20 2003  Nanbor Wang  <nanbor@cs.wustl.edu>
 
-	* docs/releasenotes.html: Updated with more recent news.
+	* docs/releasenotes.html: Updated the release notes with more
+	  recent news.
 
 Fri Oct  3 08:14:26 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
 
